2015-01-30  Chris Dumez  <cdumez@apple.com>

        Unreviewed. Fix Windows build after r179409.

        * DumpRenderTree/win/TestRunnerWin.cpp:
        (TestRunner::notifyDone):
        (TestRunner::queueLoad):

2015-01-30  Chris Dumez  <cdumez@apple.com>

        Rename shared() static member functions to singleton() for singleton classes.
        https://bugs.webkit.org/show_bug.cgi?id=141088

        Reviewed by Ryosuke Niwa and Benjamin Poulain.

        Rename shared() static member functions to singleton() for singleton
        classes as per the recent coding style change.

2015-01-30  Antti Koivisto  <antti@apple.com>

        OSObjectPtr does not work with dispatch_data_t on Maverics
        https://bugs.webkit.org/show_bug.cgi?id=141081

        Reviewed by Pratik Solanki.

        * TestWebKitAPI/Tests/WTF/darwin/OSObjectPtr.cpp:
        (TestWebKitAPI::TEST):

2015-01-30  Brent Fulgham  <bfulgham@apple.com>

        [Win] Switch to Apache on Windows
        https://bugs.webkit.org/show_bug.cgi?id=141060

        Reviewed by Alexey Proskuryakov.

        Update our scripts under Windows (and Cygwin) to locate and use
        the XAMPP installation of Apache for running tests.

        * Scripts/run-webkit-httpd:
        * Scripts/webkitperl/httpd.pm:
        (getHTTPDPath):
        (getDefaultConfigForTestDirectory):
        (getHTTPDConfigPathForTestDirectory):
        * Scripts/webkitpy/common/system/executive_unittest.py:
        (ExecutiveTest.serial_test_kill_process):
        * Scripts/webkitpy/layout_tests/servers/apache_http_server.py:
        (LayoutTestApacheHttpd.__init__):
        (LayoutTestApacheHttpd._get_apache_config_file_path):
        (LayoutTestApacheHttpd._stop_running_server):
        * Scripts/webkitpy/layout_tests/servers/http_server_base.py:
        (HttpServerBase._is_server_running_on_all_ports):
        * Scripts/webkitpy/port/base.py:
        (Port._apache_config_file_name_for_platform):